--- a/package.json
+++ b/package.json
@@ -16,11 +16,14 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
+    "http-errors": "^2.0.0",
     "mongodb": "^6.19.0",
     "mongoose": "^8.18.1",
     "morgan": "^1.10.1",
     "node": "^24.8.0",
-    "nodemon": "^3.1.10"
+    "nodemon": "^3.1.10",
+    "uuid": "^13.0.0",
+    "zod": "^4.1.8"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
