--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "app.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/app.js",
+    "start": "node ./dist/app.js",
     "dev": "ts-node-dev ./src/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
